--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "animate.css": "^4.1.1",
         "bootstrap": "^5.2.3",
+        "bootstrap-icons": "^1.10.3",
         "flag-icon-css": "^4.1.7"
     }
 }
